# McpJames_plusplus

./: CMakeLists.txt
include/: mcp.hpp
include/transport/: http_transport.hpp  sse_transport.hpp  transport.hpp
include/type/: mcp_type.hpp  schema_serialization.hpp  schemajson.hpp  schemajson_serialization.hpp
